<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Notes" />

    <EditText
        android:id="@+id/edtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.75"
        android:ems="10" 
        android:inputType="textMultiLine"
		android:gravity="left|top"
		android:minLines="6" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DateTime" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.24"
             />

        <Button
            android:id="@+id/btnTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.24"
             />

    </LinearLayout>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <CheckBox
        android:id="@+id/ckSendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SendMessage" />
    <TextView
        android:id="@+id/txtMessagenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
    </LinearLayout>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <CheckBox
        android:id="@+id/ckCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MakeCall" />
    <TextView
        android:id="@+id/txtPhonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
	</LinearLayout>
    <Button
        android:id="@+id/btnComfirme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Comfirme" />

</LinearLayout>